vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true


  tags = {
    Name = format("%s", var.project_name)
  }
}
